name = "pollstats"
version = "0.0.1"
authors = [
  { name="x22147802", email="x22147802@student.ncirl.ie" },
]
description = "pollstats is with defined views to consume in your application with just simple import of the package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/x22147802/library"
